--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 
 [dependencies]
 freedesktop_entry_parser = "1.0.0"
-locale-settings = "0.3.0"
-locale-types = "0.3.0"
+locale-types = "0.4.0"
 pathsearch = "0.2.0"
+libc = "0.2.74"
