--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ freedesktop_entry_parser = "1.0.0"
 locale-types = "0.4.0"
 pathsearch = "0.2.0"
 libc = "0.2.74"
+gtk-layer-shell = { path = "../gtk-layer-shell-rs" }
