--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ locale-types = "0.4.0"
 pathsearch = "0.2.0"
 libc = "0.2.74"
 gtk-layer-shell = { path = "../gtk-layer-shell-rs" }
-gtk = "0.9.1"
+gtk = { version = "0.9.1", features = ["v3_22"] }
 gio = "0.9.0"
 gdk = "0.13.0"
+pango = "0.9.0"
+shellexpand = "2.0.0"
+gdk-pixbuf = "0.9.0"
