--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,7 @@ log = "0.4.11"
 glib = "0.10.1"
 futures = "0.3.5"
 fuzzy-matcher = "0.3.5"
+xdg = "2.2.0"
+serde = "1.0.114"
+serde_derive = "1.0.114"
+toml = "0.5.6"
