--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+freedesktop_entry_parser = "1.0.0"
 locale-types = "0.4.0"
 pathsearch = "0.2.0"
 libc = "0.2.74"
