--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,12 @@ version = "0.0.1"
 authors = ["Dorian Rudolph"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 freedesktop_entry_parser = "1.0.0"
 locale-types = "0.4.0"
 pathsearch = "0.2.0"
 libc = "0.2.74"
-gtk-layer-shell = { path = "../gtk-layer-shell-rs" }
+gtk-layer-shell = { git = "https://github.com/DorianRudolph/gtk-layer-shell-rs.git" }
 gtk = { version = "0.9.1", features = ["v3_22"] }
 gio = "0.9.0"
 gdk = "0.13.0"
