--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Dorian Rudolph"]
 edition = "2018"
 
 [dependencies]
-freedesktop_entry_parser = "1.0.0"
+freedesktop_entry_parser = "1.1.0"
 locale-types = "0.4.0"
 libc = "0.2.74"
 gtk-layer-shell = { git = "https://github.com/DorianRudolph/gtk-layer-shell-rs.git" }
@@ -21,6 +21,7 @@ xdg = "2.2.0"
 serde = "1.0.114"
 serde_derive = "1.0.114"
 toml = "0.5.6"
+regex = "1.4.2"
 
 [profile.release]
 lto = true
