--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,13 @@ edition = "2018"
 freedesktop_entry_parser = "1.1.0"
 locale-types = "0.4.0"
 libc = "0.2.74"
-gtk-layer-shell = { git = "https://github.com/DorianRudolph/gtk-layer-shell-rs.git" }
-gtk = { version = "0.9.1", features = ["v3_22"] }
-gio = "0.9.0"
-gdk = "0.13.0"
-pango = "0.9.0"
-gdk-pixbuf = "0.9.0"
-glib = "0.10.1"
+gtk-layer-shell = "0.2.2"
+gtk = { version = "0.14.1", features = ["v3_22"] }
+gio = "0.14.6"
+gdk = "0.14.2"
+pango = "0.14.3"
+gdk-pixbuf = "0.14.0"
+glib = "0.14.8"
 futures = "0.3.5"
 fuzzy-matcher = "0.3.5"
 xdg = "2.2.0"
