--- a/sample-config/default-config.toml
+++ b/sample-config/default-config.toml
@@ -41,6 +41,8 @@ exclude = [] # list of regexes for excluded app ids (name of the .desktop file)
 # use "" to disable launching commands
 command_prefix = ":"
 
+recent_first = true # sort matches of equal quality by most recently used
+
 # specify name overrides (id is the name of the desktop file)
 [name_overrides]
 # id = "name\rextra"hide_extra_if_contained
