--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sirula"
-version = "0.0.1"
+version = "1.0.0"
 authors = ["Dorian Rudolph"]
 edition = "2018"
 
@@ -22,6 +22,7 @@ serde = "1.0.130"
 serde_derive = "1.0.130"
 toml = "0.5.8"
 regex = "1.5.4"
+osstrtools = "0.2.2"
 
 [profile.release]
 lto = true
