--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sirula"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["Dorian Rudolph"]
 edition = "2018"
 
@@ -8,20 +8,20 @@ edition = "2018"
 freedesktop_entry_parser = "1.2.0"
 locale-types = "0.4.0"
 libc = "0.2.103"
-gtk-layer-shell = "0.2.2"
-gtk = { version = "0.14.3", features = ["v3_22"] }
-gio = { version = "0.14.8", features = ['v2_60'] }
-gdk = "0.14.3"
-pango = "0.14.8"
-gdk-pixbuf = "0.14.0"
-glib = "0.14.8"
-futures = "0.3.17"
+gtk-layer-shell = "0.4.1"
+gtk = { version = "0.15.5", features = ["v3_22"] }
+gio = { version = "0.15.12", features = ["v2_60"] }
+gdk = "0.15.4"
+pango = "0.15.4"
+gdk-pixbuf = "0.15.11"
+glib = "0.15.12"
+futures = "0.3.21"
 fuzzy-matcher = "0.3.7"
-xdg = "2.3.0"
-serde = "1.0.130"
-serde_derive = "1.0.130"
-toml = "0.5.8"
-regex = "1.5.4"
+xdg = "2.4.1"
+serde = "1.0.138"
+serde_derive = "1.0.138"
+toml = "0.5.9"
+regex = "1.6.0"
 osstrtools = "0.2.2"
 
 [profile.release]
