--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ serde_derive = "1.0.138"
 toml = "0.5.9"
 regex = "1.6.0"
 osstrtools = "0.2.2"
+clap = { version = "4.1.4", features = ["derive"] }
+titlecase = "2.2.1"
+once_cell = "1.17.0"
 
 [profile.release]
 lto = true
