--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde = "1.0.138"
 serde_derive = "1.0.138"
 toml = "0.5.9"
 regex = "1.6.0"
-osstrtools = "0.2.2"
+osstrtools = {git = "https://github.com/Artturin/osstrtools.git", rev="6360f4f842eb542ff4e62e75851ea8ba83808471"}
 
 [profile.release]
 lto = true
