Add config option

--- a/sample-config/default-config.toml
+++ b/sample-config/default-config.toml
@@ -29,6 +29,9 @@ margin_right = 0
 width = -1
 height = -1
 
+# close window on unfocus
+close_on_unfocus = true
+
 # specify extra field to be displayed alongside the name (may be empty)
 extra_field = ["id_suffix"] # variants: id, id_suffix, executable, command_line
 hide_extra_if_contained = true # hide extra field if it is already contained in the app name
